# FaultMeshGeneration

./: .gitignore  KMLEdit.ipynb  MeshGen.ipynb  README.md  create_velocity_netcdf.py  environment.yml  filtered_nshm23.kml  generate_svg.py  generating_ASAGI_file.py  get_point.py  gmsh_gen.py  merge_and_smooth.py  mesh-gen.py  meshgen.py  pyproject.toml  requirements.txt  test.py  x2.msh
.zed/: debug.json  tasks.json
BAM/: convert_to_longlat.py  convert_to_useable.py
SeisSol/: harness.py  monitor.sh  plot_energy_files.py  postprocess.py  sample_expanse_job_script.sh  thenotetaker.py
simmoder/: gambit_seisSol.sxp
