[project]
name = "faultmeshgeneration"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastkml>=1.1.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "gmsh>=4.14.1",
    "h5py>=3.14.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "meshio>=5.3.5",
    "netcdf4>=1.7.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "py3dep<0.19.0",
    "pyvista>=0.46.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]
